@@ -2,6 +2,8 @@ UNRELEASED CHANGES
 
   * The open() syscall supports the O_TRUNC flag now.
 
+  * `mount.s3ql` now exits gracefully on CTRL-C (INT signal)
+
 2020-09-04, S3QL 3.5.1
 
   * `s3qlctrl upload-meta` now works properly again (previously, only the first
